--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mysqlclient = "^2.0.3"
 httpx = {extras = ["http2"], version = "^0.20.0"}
 user-agent2 = "^2021.11.1"
 crontab = "^0.23.0"
+oss2 = "^2.15.0"
 
 [tool.poetry.dev-dependencies]
 Sphinx = "^4.3.0"
