--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ Sphinx = "^4.3.0"
 cx-oracle = "^8.3.0"
 ipython = "^7.29.0"
 isort = "^5.10.1"
+requests-ftp = "^0.3.1"
+pyftpdlib = "^1.5.6"
+flask = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
